# psygnal

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  asv.conf.json  codecov.yml  gen_callback_code.py  index.json  info.json  mkdocs.yml  pyproject.toml  regressions.json  regressions.xml  setup.cfg  setup.py  tox.ini
.asv/results/: benchmarks.json
.asv/results/GitHubRunner/: 057d0e82-conda-py3.9-cython.json  057d0e82-conda-py3.9.json  24ee1571-conda-py3.9-cython.json  24ee1571-conda-py3.9.json  407f40a8-conda-py3.9-cython.json  407f40a8-conda-py3.9.json  adc34f08-conda-py3.9-cython.json  adc34f08-conda-py3.9.json  b1f41733-conda-py3.9-cython.json  b1f41733-conda-py3.9.json  d72df61e-conda-py3.9-cython.json  d72df61e-conda-py3.9.json  machine.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md  ci.yml
.github/workflows/: benchmark.yml  ci.yml  pypi.yml  test.yml
benchmarks/: _evented.py  benchmarks.py
docs/: 00_index.md  01_usage.md  02_dataclasses.md  dataclasses.md  index.md  requirements.txt  usage.md
docs/API/: containers.md  evented.md  index.md  model.md  proxy.md  throttler.md  utilities.md
docs/guides/: async.md  containers.md  dataclasses.md  debugging.md  model.md  testing.md  throttler.md
docs/stylesheets/: extra.css
graphs/branch-main/env-HATCH_BUILD_HOOKS_ENABLE-1/machine-github-actions/python-3.10/: benchmarks.ConnectSuite.time_connect.json  benchmarks.ConnectSuite.time_connect_builtin.json  benchmarks.ConnectSuite.time_connect_checktype.json  benchmarks.ConnectSuite.time_connect_lambda.json  benchmarks.ConnectSuite.time_connect_partial.json  benchmarks.CreateSuite.time_create_signal_instance.json  benchmarks.EmitSuite.time_emit_to_all.json  benchmarks.EmitSuite.time_emit_to_attr.json  benchmarks.EmitSuite.time_emit_to_function.json  benchmarks.EmitSuite.time_emit_to_item.json  benchmarks.EmitSuite.time_emit_to_method.json  benchmarks.EmitSuite.time_emit_to_partial.json  summary.json
graphs/summary/: benchmarks.ConnectSuite.time_connect_method.json  benchmarks.ConnectSuite.time_connect_nochecks.json  benchmarks.ConnectSuite.time_connect_partial_method.json  benchmarks.CreateSuite.time_create_signal.json  benchmarks.EmitSuite.time_emit_to_all.json  benchmarks.EmitSuite.time_emit_to_attr.json  benchmarks.EmitSuite.time_emit_to_function.json  benchmarks.EmitSuite.time_emit_to_item.json  benchmarks.EmitSuite.time_emit_to_method.json  benchmarks.EmitSuite.time_emit_to_partial.json
psygnal/: __init__.py  _evented_model.py  _group.py  _pydantic.py  _signal.py  _throttler.py  utils.py
psygnal/containers/: __init__.py  _evented_dict.py  _evented_list.py  _evented_proxy.py  _evented_set.py  _selectable_evented_list.py  _selection.py
scripts/: build_stub.py  render_connect_overloads.py
src/psygnal/: __init__.py  _async.py  _dataclass_utils.py  _evented_decorator.py  _evented_model.py  _evented_model_shared.py  _evented_model_utils.py  _evented_model_v1.py  _evented_model_v2.py  _exceptions.py  _group.py  _group.pyi  _group2.py  _group_descriptor.py  _mypyc.py  _queue.py  _signal.py  _signal.py.jinja2  _signal.pyi  _throttler.py  _throttler.pyi  _timer.py  _weak_callable.py  _weak_callback.py  _weak_partial.py  qt.py  testing.py  utils.py
src/psygnal/_pyinstaller_util/: _pyinstaller_hook.py  hook-psygnal.py  test_pyinstaller_hook.py
src/psygnal/containers/: __init__.py  _evented_dict.py  _evented_list.py  _evented_proxy.py  _evented_set.py  _selectable_evented_list.py  _selection.py
tests/: __init__.py  check_tag.py  test_bench.py  test_coroutines.py  test_custom_fields.py  test_dataclass_utils.py  test_evented_decorator.py  test_evented_list.py  test_evented_model.py  test_group.py  test_group_aliases.py  test_group_descriptor.py  test_path_step.py  test_psygnal.py  test_pydantic_support.py  test_pyinstaller_hook.py  test_qt_compat.py  test_qtbot.py  test_testing_utils.py  test_throttler.py  test_utils.py  test_validator.py  test_weak_callable.py
tests/containers/: test_evented_dict.py  test_evented_list.py  test_evented_proxy.py  test_evented_set.py  test_nested_containers.py  test_selectable_evented_list.py  test_selection.py
typesafety/: test_containers.yml  test_group.yml  test_signal.yml  test_utils.yml
