[metadata]
name = psygnal
description = Pure python implementation of Qt Signals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/psygnal
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed
project_urls =
    Source Code =https://github.com/tlambert03/psygnal

[options]
packages = find:
install_requires =
    typing-extensions
python_requires = >=3.7
setup_requires =
    setuptools-scm
zip_safe = False

[options.packages.find]
exclude =
    tests
    benchmarks

[options.extras_require]
build =
    Cython>=3.0a7;sys_platform != 'win32'
dev =
    PyQt5
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    mypy
    pre-commit
    pydocstyle
    pytest
    pytest-cov
    pytest-mypy-plugins
    pytest-qt
    qtpy
    wrapt
proxy =
    wrapt
testing =
    numpy
    pytest
    pytest-cov
    pytest-mypy-plugins
    wrapt
testingqt =
    PyQt5
    pytest-qt
    qtpy

[options.package_data]
psygnal = py.typed

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503, TC002
per-file-ignores =
    tests/test_psygnal.py:E704,E701,E302

[isort]
profile = black
src_paths = psygnal

[pydocstyle]
match_dir = psygnal
convention = numpy
add_select = D402,D415,D417
add_ignore = D105

[tool:pytest]
minversion = 6.0
addopts = --mypy-ini-file=setup.cfg
filterwarnings =
    error
    ignore:The distutils package is deprecated:DeprecationWarning:

[mypy]
files = psygnal
strict = True
disallow_any_generics = False

[mypy-cython]
ignore_missing_imports = True

[mypy-wrapt]
ignore_missing_imports = True

[coverage:run]
omit =
    psygnal/containers/__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    @overload
    except ImportError
